#2324 - fix pager spacing between page numbers

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/organization/wfp/organization-wfp.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/organization/wfp/organization-wfp.css
@@ -141,6 +141,7 @@ a:focus,
   padding: 12px 17px 13px;
   background-color: #ffffff;
   border: none;
+  margin-left: -2px;
 }
 .pagination li.active a,
 .module .pagination li.active a {
