--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/base/pagination.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/base/pagination.less
@@ -24,6 +24,7 @@
       padding: 12px 17px 13px; //magic numbers? :)
       background-color: @whiteColor;
       border: none;
+      margin-left: -2px;
     }
 
     &.active a {
